# bixi-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
public/: atlas.css  atlas.html  heatmap.css  heatmap.html  history.css  history.html  index.html  manifest.json  style.css  sw.js
public/js/: app.js  atlas.js  geo.js  heatmap.js  history.js  map.js  trips.js  ui.js
src/: cache.rs  db.rs  main.rs  models.rs  push.rs  routes.rs  tracker.rs  zones.rs
