[package]
name = "bixi-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
geo = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tower-http = { version = "0.6", features = ["fs", "cors"] }
chrono-tz = "0.10.4"